MPV no longer transparent when not in focus. Fish now starts X on login. i3 starts udiskie for convenience's sake. Updates to nvim, polybar, xresources.

--- a/i3/config
+++ b/i3/config
@@ -142,3 +142,6 @@ exec_always --no-startup-id feh --no-fehbg --bg-scale $background_file
 # Start notification daemon
 exec --no-startup-id dunst
 
+# Start udiskie so USB sticks are reasonable to use
+exec --no-startup-id udiskie
+
