--- a/compton.conf
+++ b/compton.conf
@@ -128,7 +128,8 @@ alpha-step = 0.06;
 blur-background-fixed = false;
 blur-background-exclude = [
     "window_type = 'dock'",
-    "window_type = 'desktop'"
+    "window_type = 'desktop'",
+	"window_type = 'mpv'",
 ];
 
 #################################
@@ -203,7 +204,9 @@ sw-opti = true;
 unredir-if-possible = true;
 
 # Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ ];
+focus-exclude = [
+	"class_g = 'mpv'"
+];
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
 detect-transient = true;
