--- a/compton.conf
+++ b/compton.conf
@@ -60,15 +60,15 @@ shadow = true;
 # Don't draw shadows on DND windows.
 no-dnd-shadow = true;
 # Avoid drawing shadows on dock/panel windows.
-no-dock-shadow = true;
+no-dock-shadow = false;
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 clear-shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 5;
+shadow-radius = 12;
 # The left offset for shadows. (default -15)
-shadow-offset-x = -5;
+shadow-offset-x = -25;
 # The top offset for shadows. (default -15)
-shadow-offset-y = -5;
+shadow-offset-y = 5;
 # The translucency for shadows. (default .75)
 shadow-opacity = 0.5;
 
@@ -82,22 +82,7 @@ shadow-opacity = 0.5;
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
 shadow-exclude = [
     "! name~=''",
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
-    "name *= 'VLC'",
     "name *= 'compton'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "class_g = 'Conky'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
     "_GTK_FRAME_EXTENTS@:c"
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
@@ -110,7 +95,7 @@ shadow-ignore-shaped = false;
 #################################
 
 menu-opacity = 1;
-inactive-opacity = 0.75;
+inactive-opacity = 0.7;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
@@ -121,15 +106,16 @@ alpha-step = 0.06;
 # Do not let dimness adjust based on window opacity.
 #inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-#blur-background = true;
+blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
-#blur-background-frame = true;
+blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = false;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'",
 	"window_type = 'mpv'",
+	"class_g = 'Firefox'"
 ];
 
 #################################
@@ -145,7 +131,7 @@ fade-delta = 6;
 # Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.03;
 # Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.03;
+fade-out-step = 0.009;
 # Fade windows in/out when opening/closing
 # no-fading-openclose = true;
 
@@ -205,7 +191,8 @@ unredir-if-possible = true;
 
 # Specify a list of conditions of windows that should always be considered focused.
 focus-exclude = [
-	"class_g = 'mpv'"
+	"class_g = 'mpv'",
+	"class_g = 'firefox'"
 ];
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
@@ -227,7 +214,7 @@ wintypes:
         # fade: Fade the particular type of windows.
         fade = true;
         # shadow: Give those windows shadow
-        shadow = false;
+        shadow = true;
         # opacity: Default opacity for the type of windows.
         opacity = 0.85;
         # focus: Whether to always consider windows of this type focused.
