--- a/polybar/config
+++ b/polybar/config
@@ -9,16 +9,20 @@
 
 [colors]
 background = ${xrdb:background:#222}
-background-alt = #444
+background-alt = ${xrdb:pointerColorBackground:#222}
 foreground = ${xrdb:foreground:#222}
-foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
+foreground-alt = ${xrdb:pointerColorForeground:#222}
+primary = ${xrdb:color0:#222}
+secondary = ${xrdb:color7:#222}
+alert = ${xrdb:color1:#222}
 
 [bar/top]
-width = 100%
+monitor = ${env:PRIMARY_MONITOR:eDP-1}
+override-redirect = true
 height = 32
+width = 98%
+offset-x = 1%
+offset-y = 16
 fixed-center = true
 
 background = ${colors.background}
@@ -36,64 +40,17 @@ padding-top = 1
 module-margin-left = 1
 module-margin-right = 0
 
-font-0 = Droid Sans Mono Slashed for Powerline:fontformat=truetype:size=16:antialias=true;0
+font-0 = SauceCodePro Nerd Font Mono:fontformat=truetype:size=16:antialias=true;0
 font-1 = Unifont:fontformat=truetype:size=12:antialias=false;0
 font-2 = FontAwesome:fontformat=truetype:size=12:antialias=true;0
 
 modules-left = powermenu i3
 modules-center = date
-modules-right = mpd volume wlan eth battery 
+modules-right = spotify pulseaudio wlan eth battery 
 
 tray-position = right
 tray-padding = 2
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:30:...%
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
-
-label-layout = %layout%
-label-layout-underline = ${colors.secondary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
-
-[module/bspwm]
-type = internal/bspwm
-
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
-
-label-occupied = %index%
-label-occupied-padding = 2
-
-label-urgent = %index%!
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
-
-label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 2
 
 [module/i3]
@@ -105,19 +62,20 @@ wrapping-scroll = false
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
 
-label-mode-padding = 2
+label-mode = %mode%
+label-mode-padding = 1
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
-label-focused-background = ${module/bspwm.label-focused-background}
-label-focused-underline = ${module/bspwm.label-focused-underline}
-label-focused-padding = ${module/bspwm.label-focused-padding}
+label-focused-background = ${colors.background-alt}
+label-focused-underline = ${colors.secondary}
+label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%
-label-unfocused-padding = ${module/bspwm.label-occupied-padding}
+label-unfocused-padding = 1
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
@@ -126,106 +84,37 @@ label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %index%
-label-urgent-background = ${module/bspwm.label-urgent-background}
-label-urgent-padding = ${module/bspwm.label-urgent-padding}
+label-urgent-background = ${colors.alert}
+label-urgent-padding = ${self.label-focused-padding}
 
-[module/mpd]
-type = internal/mpd
-format-online = %{A1:mpc toggle:}<label-song>%{A} <toggle> <icon-next> 
-format-online-underline = #1df760
+[module/spotify]
+type = custom/script
+interval = 5
 
-format-offline = <label-offline>
-format-offline-underline = #1df760
-
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song = %artist% - %title%
-label-song-maxlen = 40
-label-song-ellipsis = true
-label-song-underline = #1df760
-label-song-font = 1
-
-label-offline = "No music :("
-
-[module/xbacklight]
-type = internal/xbacklight
-
-format = <label> <bar>
-label = BL
-
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #ff
-bar-indicator-font = 1
-bar-fill = ─
-bar-fill-font = 1
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 1
-bar-empty-foreground = ${colors.foreground-alt}
-
-[module/backlight-acpi]
-inherit = module/xbacklight
-type = internal/backlight
-card = intel_backlight
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
-label = %percentage%%
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
-label = %percentage_used%%
+format-prefix = " "
+format = %{A1:playerctl play-pause:}⏯ <label>%{A} %{A1:playerctl next:}⏭%{A}
+exec = ~/.config/polybar/polybar-spotify.sh
+format-underline = #1db954
 
 [module/wlan]
 type = internal/network
-interface = wlp4s0
+interface = wlp58s0
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
+format-connected = <label-connected>
+format-connected-underline = ${xrdb:color13:#505}
 label-connected =  %essid%
-
 format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = net0
+interface = enp57s0u1u2
 interval = 3.0
 
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
+format-connected-underline = ${xrdb:color13:#505}
 label-connected =  %local_ip%
 
-format-disconnected = [disconnected]
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+format-disconnected = 
 
 [module/date]
 type = internal/date
@@ -242,36 +131,19 @@ format-underline = #0a6cf5
 label = %date%%time%
 label-font = 1
 
-[module/volume]
-type = internal/volume
+[module/pulseaudio]
+type = internal/pulseaudio
+interval = 5
 
-format-volume =  <label-volume>
-format-volume-underline = #ef3f28
-label-volume = %percentage%
-label-volume-foreground = ${root.foreground}
-label-volume-font = 1
+format-volume = <ramp-volume> <label-volume>
+label-muted = 婢 muted
+label-muted-foreground = #666
+format-volume-underline = ${xrdb:color1:#222}
+format-muted-underline = ${self.format-volume-underline}
 
-format-muted-prefix = 
-format-muted-foreground = ${colors.foreground-alt}
-format-muted-underline = #ef3f28
-label-muted =  muted
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 1
-bar-volume-fill = ─
-bar-volume-fill-font = 1
-bar-volume-empty = ─
-bar-volume-empty-font = 1
-bar-volume-empty-foreground = ${colors.foreground-alt}
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
 
 [module/battery]
 type = internal/battery
@@ -280,44 +152,26 @@ adapter = AC
 full-at = 98
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
+format-charging-underline = ${xrdb:color9:#ffb52a}
 
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
+format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+format-full-underline = ${xrdb:color3:#ffb500}
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
 ramp-capacity-foreground = ${colors.foreground-alt}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
 animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
-
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
-
-format = <ramp> <label>
-format-underline = #f50a4d
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
-
-label = %temperature%
-label-warn = %temperature%
-label-warn-foreground = ${colors.secondary}
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
 type = custom/menu
@@ -355,13 +209,8 @@ menu-3-1-exec = i3-msg exit
 
 [settings]
 screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
 
 [global/wm]
 margin-top = 5
 margin-bottom = 5
 
-; vim:ft=dosini
