Fix wallpaper pathing/exec.

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -178,6 +178,6 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Launch other utilities
 exec-once = /usr/bin/dunst & #notifications
-exec-once = /home/brentg/.config/hypr/wallpaper.sh /home/brentg/Pictures/Backgrounds > /tmp/log.txt 2>&1 & #wallpapers
+exec-once = ~/.config/hypr/wallpaper.sh ~/Pictures/Backgrounds > /tmp/log.txt 2>&1 & #wallpapers
 exec-once = /usr/libexec/kf5/polkit-kde-authentication-agent-1 & #permission management
 exec-once = eww open bar &
